--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -13,7 +13,7 @@ build_flags =
 
   ; Access point settings
   -D FACTORY_AP_PROVISION_MODE=AP_MODE_DISCONNECTED
-  -D FACTORY_AP_SSID=\"WC-#{unique_id}\" ; 1-64 characters, supports placeholders
+  -D FACTORY_AP_SSID=\"卫生间-#{unique_id}\" ; 1-64 characters, supports placeholders
   -D FACTORY_AP_PASSWORD=\"123456789\" ; 8-64 characters
   -D FACTORY_AP_CHANNEL=1
   -D FACTORY_AP_SSID_HIDDEN=false
